[gd_scene load_steps=8 format=2]

[ext_resource path="res://henwee.png" type="Texture" id=1]
[ext_resource path="res://WanderController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy.gd" type="Script" id=3]
[ext_resource path="res://PlayerDetectionZone.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 14.0

[sub_resource type="CircleShape2D" id=3]
radius = 999.0

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[node name="Enemy" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
modulate = Color( 0.301961, 1, 0.247059, 1 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
scale = Vector2( 0.963602, 0.881676 )
shape = SubResource( 3 )

[node name="WanderController" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="killkill" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="killkill"]
shape = SubResource( 4 )

[node name="dietimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="killkill" to="." method="_on_killkill_body_entered"]
[connection signal="timeout" from="dietimer" to="." method="_on_dietimer_timeout"]
